--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: ZJ Blog
+title: JZ Blog
 SEOTitle: James的博客 | BY Blog
 header-img: img/post-bg-desk.jpg
 email: zpf15906654081@gmail.com
